--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.0.0",
     "qs": "^6.9.3",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.12",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
