--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "echarts": "^5.0.1",
+    "echarts-wordcloud": "^2.0.0",
     "qs": "^6.9.3",
     "sg-scroll": "^2.2.1",
     "vue": "^2.6.11",
